# uni-dump

./: .gitignore  Esami.md  Exams.md  Index.md  README.md  Timetable.md  WEEK-TODO.md  bibliography.bib  taskell.md
AAut-INF0091/: Index.md  Makefile  metadata.yaml
AAut-INF0091/Lab/: .gitignore  shell.nix
AAut-INF0091/Notes/: A_Intro.md  Argomento1.md  Argomento10.md  Argomento12.md  Argomento2.md  Argomento3.md  Argomento4.md  Argomento5.md  Argomento6.md  Argomento7.md  Argomento8.md  Argomento9.md  B_BeyondBinary.md  D_TreeModels.md  E_RuleModels.md  F_LinearModels.md  G_DistanceModels.md  J_EnsembleLearning.md  K_MLExperiments.md  Makefile  metadata.yaml
BioInf-MFN0951/: 01.md  02.md  03.md  04.md  05.md  06.md  99.md  Argomento1.md  Argomento2.md  Argomento3.md  Index.md  Makefile  domande_BIOINFO.md  metadata.yaml
BioInf-MFN0951/riassunti/: Riassunto.md
Courses/AAUT/: README.md
Courses/BioInf/: NGS.md  Questions.md  README.md
Courses/ComplAP/: Homework 1.tex  Homework 2.tex  README.md
Courses/ELIVA/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  99.md  Makefile  metadata.yaml
Courses/ESP/: Journal Article.md  Questions.md  README.md  Surveillance Capitalism Summary.md
Courses/IALAB/: README.md  flake.nix
Courses/MetNum/: README.md
ESP-INF0187/: Libro Boella.md  Privacy - Domande orale.md
IALAB-MFN0942/: Dist.pro  flake.nix
LogInf-INF00102/: 03-Resolution.md
MAADB-INF0092/: 01.md
MetNum-MFN0962/: Index.md  README.md
ModSem-INF0071/: Index.md  Progetto.md  Scratchpad Progetto.md
Projects/: README.md
Projects/SCPD/Fluid Solver/: .gitignore  CMakeLists.txt  README.md
Projects/SCPD/Fluid Solver/report/: Bibliography.bib  Makefile  Preamble.tex  README.md  Report.md  benchmarks.csv
Projects/SCPD/Fluid Solver/src/: main.cpp
Projects/SCPD/Fluid Solver/src/common/: Array.hpp  Bitmap.cpp  Bitmap.hpp  D2Q9.hpp  Defines.hpp  Exceptions.hpp  Lattice.cpp  Lattice.hpp  Parameters.cpp  Parameters.hpp  Solver.hpp  Vector2D.hpp
Projects/SCPD/Fluid Solver/src/common/engines/: SdlEngine.cpp  SdlEngine.hpp
Projects/SCPD/Fluid Solver/src/cpu/: CpuSolver.cpp  CpuSolver.hpp
Projects/SCPD/Fluid Solver/src/gpu/: GpuSolver.cu  GpuSolver.cuh  GpuUtils.cuh
Projects/SCPD/Fluid Solver/src/res/: config.ini
RNDL-INF0188/: 00-Intro.md  01-Percettrone.md  02-Multilayer-Perceptron.md  Makefile  index.md
SCPD-MFN0795/: '  01.md  02.md  03.md  04.md  05.md  07.md  08.md  09.md  10.md  11.md  Argomento1.md  Argomento2.md  Argomento3.md  Argomento4.md  Argomento6.md  Argomento7.md  Argomento8.md  Argomento9.md  Introduzione.md  Makefile  metadata.yaml
TAAS-INF0100/: Makefile  Riassuntino.md  metadata.yaml
TLN-INF0094/: 1.md
Thesis/: README.md
(+899 files in other folders)
